# Ourin

./: $!  .gitignore  AGENTS.md  AUDIT_CLAUDE.md  CLAUDE.md  COPILOT_AUTO_PROMPT.md  COPILOT_CONTINUATION_PROMPT.md  COPILOT_INSTRUCTIONS.md  DEVELOPMENT_LOG.md  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  MISSION.template.md  README.md  YAYA_CORE_COMPLETE.md  fix_extension_access.py  fix_extensions.py  remove_from_main.py  run_ourin.sh  split_ghostmanager.py
.claude/: mcp.json
.kamui/: model-versions-cache.json  system-graph-state.json
.serena/: project.yml
MacUkagaka/: ContentView.swift  MacUkagaka-Bridging-Header.h  MacUkagakaApp.swift  RightClickMenu.swift
MacUkagaka.xcodeproj/: project.pbxproj
MacUkagakaTests/: MacUkagakaTests.swift
MacUkagakaUITests/: MacUkagakaUITests.swift  MacUkagakaUITestsLaunchTests.swift
Ourin/: CloseConfirmationDelegate.swift  CompatLogger.swift  ContentView.swift  LogModels.swift  LogStore.swift  Ourin-Bridging-Header.h  Ourin.entitlements  Ourin.icns  OurinApp.swift  RightClickMenu.swift  WindowAccessor.swift  main.swift
Ourin.xcodeproj/: project.pbxproj
OurinShioriXPCService/: Info.plist  main.swift
OurinTests/: AnimationEngineTests.swift  BalloonTests.swift  BuildGETTests.swift  CalendarRegistryTests.swift  DressupMenuParsingTests.swift  EncodingNormalizerCP932GateTests.swift  EnvironmentExpanderTests.swift  EventIDAuditTests.swift  EventReferenceTableTests.swift  ExternalServerSecuritySettingsTests.swift  ExternalServerTests.swift  FmoTests.swift  GhostConfigurationTests.swift  HTTPStreamingCancelTests.swift  HeadlineWireTests.swift  LegacyPluginRegistryTests.swift  LogFileSinkTests.swift  MoveCommandTests.swift  NarInstallTests.swift  OurinMigratorTests.swift  OurinPluginEventBridgeTests.swift  OverlapTransitionTests.swift  OwnerDrawMenuTests.swift  PluginBridgeIntegrationTests.swift  PluginEncodingTests.swift  PluginEventDispatchMatrixTests.swift  PluginPropertyBridgeTests.swift  PluginTargetRoutingTests.swift  PropertySetPropertyWiringTests.swift  PropertySystemTests.swift  PropertyTests.swift  ReferenceOrderingTests.swift  ResourceBridgeTests.swift  ResourceManagerFileMigrationTests.swift  ResourceManagerSeparationTests.swift  SSPCompatTests.swift  SSTPDispatcherTests.swift  SSTPExecuteMoveAsyncTests.swift  SSTPResponseTests.swift  SakuraScriptAnimationWaitTests.swift  (+14 more)
OurinUITests/: OurinUITests.swift  OurinUITestsLaunchTests.swift
PLUGIN_2_0M/: SPEC_PLUGIN_2.0M.md
Samples/: rosetta_check.swift
Samples/PLUGIN_2_0M/c_plugin/: CMakeLists.txt  plugin.c  plugin.h
Samples/PLUGIN_2_0M/c_plugin/Contents/Resources/: descript.txt
Samples/SimpleSaori/cpp_saori/: CMakeLists.txt  saori.cpp  saori.h
TODO/: todo.md
docs/: AI_ORCHESTRATION.md  AUDITS_COMPLETED.md  AUDITS_TODO.md  AUDIT_AGY.md  AUDIT_CLAUDE.md  AUDIT_CODEX.md  AUDIT_CODEX_2026-06-27.md  AUDIT_GLM.md  AUDIT_PROMPT_en-us.md  (+135 more)
satori_core/: CMakeLists.txt  PATCHES.md  README.md  UPSTREAM.md  build.sh
satori_core/src/: EncodingIconv.cpp  main.cpp
satori_core/tests/fixtures/: external_saori.cpp
satori_core/tests/fixtures/basic/: dic01_basic.txt
yaya_core/: CMakeLists.txt  EMILY4_PARSER_ENHANCEMENT.md  FUNCTION_REFERENCE.md  IMPLEMENTATION_STATUS.md  PARSER_PROGRESS_UPDATE.md  README.ja.md  README.md  build.sh  test.txt  test2.txt  test_b64.dic  test_backslash.dic  test_eval.dic  test_hex.dic  test_hex2.dic  test_int.dic  test_literal.dic  test_strlen.dic  test_strstr.dic  test_utils.dic
yaya_core/examples/: README.md  all_functions_test.dic  phase2_features.dic  re_test.dic  re_test2.dic  simple_ghost.dic
yaya_core/src/: AST.hpp  Base64.cpp  Base64.hpp  DictionaryManager.cpp  DictionaryManager.hpp  Digest.cpp  Digest.hpp  Lexer.cpp  Lexer.hpp  MessageManager.cpp  MessageManager.hpp  Parser.cpp  Parser.hpp  RandomEngine.hpp  VM.cpp  VM.hpp  Value.cpp  Value.hpp  YayaCore.cpp  YayaCore.hpp  main.cpp
(+453 files in other folders)
